# opentrader

./: .gitignore  .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: keychain.rs  lib.rs  main.rs
apps/desktop/src/lib/: Popover.css  Popover.tsx  brokerClient.ts  cn.test.ts  format.test.ts  format.ts  hotkeys.test.ts  hotkeys.ts  index.ts  marketClock.test.ts  marketClock.ts  occ.test.ts  occ.ts  queries.ts  sidecarClient.test.ts  sidecarClient.ts  useDebounce.test.ts  useDebounce.ts
apps/desktop/src/store/: workspace.test.ts  workspace.ts
apps/desktop/src/styles/: dockview-theme.css  globals.css  theme.css
apps/desktop/src/widgets/: AccountSummaryWidget.css  AccountSummaryWidget.tsx  ChartIndicatorsMenu.css  ChartIndicatorsMenu.tsx  ChartWidget.css  ChartWidget.tsx  OptionsChainWidget.css  OptionsChainWidget.tsx  OrdersWidget.css  OrdersWidget.tsx  PlaceholderWidget.css  PlaceholderWidget.tsx  PositionsWidget.css  PositionsWidget.tsx  SnapshotWidget.css  SnapshotWidget.tsx  WatchlistWidget.css  WatchlistWidget.tsx  optionsChainCalc.test.ts  optionsChainCalc.ts  registry.tsx
apps/desktop/src/workspace/: AccountDropdown.css  AccountDropdown.tsx  AccountSync.tsx  AddWidgetMenu.css  AddWidgetMenu.tsx  (+19 more)
